@@ -1,0 +1,25 @@
+Para acessar um server via SSH (ou usando SCP) sem senha, basta estabelecer uma relação de confiança com o mesmo.
+
+No caso do linux, fazemos isso com chaves RSA. Claro, para você usar chaves criptografadas você precisa gerar sua chave.
+
+Para gerar sua chave digite no terminal:
+
+    ssh-keygen
+
+Qualquer pergunta que o comando faça pode apertar <enter>, ao fim ele vai gerar sua chave dentro do diretório /home/user/.ssh/
+
+Agora de posse de sua chave, você pode enviá-la a qualquer server que deseje acessar com confiança.
+
+Para enviar sua chave a um server digite:
+
+    ssh-copy-id 192.168.130.2
+
+onde 192.168.130.2 é um IP fictício, substitua com o IP desejado.
+
+Uma vez enviada a chave, teste o acesso com:
+
+    ssh 192.168.130.2
+
+Substitua novamente pelo IP do server desejado, se tudo correu bem, ele irá logar sem lhe pedir nenhuma senha.
+
+Todos esses passos estão descritos nesse vídeo que gravei.
