@@ -44,3 +44,9 @@ Seg Jul 20 19:56:59 BRT 2015
 - Changing the final log
 - New error logs
 
+Seg Jul 27 20:38:52 BRT 2015
+- Changing the final log
+- Adding new resources
+- Adding the .desktop file
+
+
